Updated to Java 21
* Updated all Maven dependencies to current
* Updated Dropwizard to 4.x
* Changed configuration file from ftl to yml
* Updated javax to Jakarta and fixed various other API changes