@@ -86,7 +86,7 @@ public class Quiz {
 	}
 
 	public Double pointsPerQuestion() {
-		return Math.floor(new Double(100.0 / questions.size()));
+		return Math.floor(Double.valueOf(100.0 / questions.size()));
 	}
 	
 	/**
